styling for discover more and fixed line spacing for best card

--- a/seeTEFL/style.css
+++ b/seeTEFL/style.css
@@ -212,8 +212,8 @@ iframe{
 .best-course-container{
     background-color: #F58820;
     color: white;
-    margin-top: 30px;
-    padding-bottom: 20px;
+    margin-top: 35px;
+    padding-bottom: 35px;
 }
 .best-course-container h2{
     text-align: center;
@@ -225,6 +225,7 @@ iframe{
 .best-course-container p{
     margin-bottom: 1.5em;
     font-weight: 400;
+    line-height: 1.5;
 }
 .best-course-container a{
     font-weight: 800;
@@ -240,13 +241,22 @@ iframe{
     margin-bottom: 50px;
 }
 .discover-more-container a{
+    padding-left: 10px;
+    padding-right: 10px;
     color: white;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     background-color: #04ADEF;
+    border-radius: 5px;
     width: 250px;
     height: 75px;
     font-weight: 700;
     font-size: 1.15em;
     text-decoration: none;
+}
+.discover-more-container a div{
+    width: 60%;
+    font-weight: 700;
+    font-size: 1.15em;
 }
